--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,7 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="style">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mada:wght@200;300;400&family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Ubuntu:wght@300&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/b20a572914.js" crossorigin="anonymous"></script>
 </head>
 
