--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,8 +10,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Mada:wght@200;300;400&family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&family=Ubuntu:wght@300&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap"
     rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap');
+  </style>
   <script src="https://kit.fontawesome.com/b20a572914.js" crossorigin="anonymous"></script>
 </head>
 
