--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&family=Roboto:wght@300;400;500&display=swap"
     rel="stylesheet">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&family=Roboto:wght@300;400;500&display=swap');
   </style>
   <script src="https://kit.fontawesome.com/b20a572914.js" crossorigin="anonymous"></script>
 </head>
